--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,32 @@ h1 {
 .background {
   height: 100vh;
   width: 100%;
-  background: linear-gradient(to bottom, #0e0e0e 0%, #262626 100%); }
+  background: linear-gradient(to bottom, #0e0e0e 0%, #262626 100%);
+  padding: 30px 0 0 0;
+  box-sizing: border-box; }
+
+header {
+  width: 70%;
+  height: auto;
+  margin: auto;
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0.05));
+  border: 1px inset rgba(255, 255, 255, 0.1);
+  border-radius: 25px;
+  padding: 30px;
+  box-sizing: solid; }
+  header .menu {
+    width: 100%; }
+    header .menu ul {
+      list-style: none;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center; }
+      header .menu ul li {
+        font-family: "Montserrat", sans-serif;
+        color: #f4f4f4;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        font-weight: 600;
+        font-size: 14px; }
 
 /*# sourceMappingURL=style.css.map */
