--- a/sass/components/menu/menu.scss
+++ b/sass/components/menu/menu.scss
@@ -19,11 +19,15 @@ header{
 
             li{
                 font-family: $sansSerif;
-                color: $white;
                 text-transform: uppercase;
                 letter-spacing:2px;
                 font-weight:600;
                 font-size:14px;
+
+                a {
+                    text-decoration: none;
+                    color: $white;
+                }
             }
         }
     }
