--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,8 @@
 @import "helpers/variables.scss";
 @import "helpers/reset.scss";
+@import "helpers/uppercase.scss";
 @import "helpers/clear.scss";
 
-@import "components/title.scss";
 @import "components/background.scss";
 @import "components/menu/menu.scss";
+@import "components/card/card.scss";
