--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,49 @@
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-family: "Montserrat", sans-serif; }
+
+.uppercase {
+  text-transform: uppercase; }
 
 .clear {
   clear: both; }
-
-h1 {
-  color: #f4f4f4; }
 
 .background {
   height: 100vh;
   width: 100%;
   background: linear-gradient(to bottom, #0e0e0e 0%, #262626 100%);
   padding: 30px 0 0 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  position: relative; }
+  .background::before, .background::after {
+    position: absolute;
+    content: '';
+    width: 350px;
+    height: 350px;
+    border-radius: 1000px;
+    filter: blur(5rem); }
+  .background::before {
+    top: 50px;
+    left: 100px;
+    background-color: #F5B089; }
+  .background::after {
+    bottom: 20px;
+    right: 100px;
+    background-color: #2F1F93;
+    z-index: 0; }
 
 header {
-  width: 70%;
+  width: 60%;
   height: auto;
-  margin: auto;
+  margin: 0 auto 30px auto;
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0.05));
-  border: 1px inset rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 25px;
   padding: 30px;
-  box-sizing: solid; }
+  box-sizing: border-box;
+  backdrop-filter: blur(10.5px);
+  -webkit-backdrop-filter: blur(10.5px); }
   header .menu {
     width: 100%; }
     header .menu ul {
@@ -40,5 +60,98 @@ header {
         header .menu ul li a {
           text-decoration: none;
           color: #f4f4f4; }
+
+.card {
+  width: 60%;
+  height: auto;
+  margin: auto;
+  position: relative;
+  z-index: 9; }
+  .card::before {
+    content: '';
+    position: absolute;
+    top: 5%;
+    left: 10%;
+    width: 80%;
+    height: 90%;
+    background: #D8A4F7;
+    border-radius: 60%;
+    filter: blur(5rem);
+    opacity: 0.9; }
+  .card main {
+    width: 100%;
+    height: auto;
+    background-image: radial-gradient(circle at -8% 10%, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0.01) 100%);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 25px;
+    backdrop-filter: blur(10.5px);
+    -webkit-backdrop-filter: blur(10.5px);
+    z-index: 10; }
+    .card main section,
+    .card main footer {
+      padding: 40px;
+      box-sizing: border-box; }
+    .card main section {
+      width: 100%;
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between; }
+      .card main section article.infos {
+        width: 60%; }
+        .card main section article.infos h1 {
+          color: #5B48D8;
+          font-size: 32px;
+          font-weight: 800;
+          letter-spacing: 2px; }
+        .card main section article.infos h2 {
+          color: #62616B;
+          font-size: 24px;
+          font-weight: 500;
+          margin: 15px 0 60px 0; }
+          .card main section article.infos h2 span {
+            width: 100%;
+            display: block; }
+        .card main section article.infos a {
+          font-size: 18px;
+          font-weight: 600;
+          color: #854BE3;
+          border: 2px solid #854BE3;
+          padding: 15px;
+          box-sizing: border-box;
+          text-decoration: none; }
+      .card main section article.photo img {
+        border-radius: 1000px;
+        border: 2px solid rgba(255, 255, 255, 0.25); }
+    .card main footer {
+      background-image: linear-gradient(94deg, #62B8DF 0%, #5B44D8 50%, #C054F2 100%);
+      border-bottom-left-radius: 25px;
+      border-bottom-right-radius: 25px;
+      display: flex;
+      align-items: flex-start;
+      justify-content: flex-start; }
+      .card main footer article {
+        width: 50%; }
+        .card main footer article p {
+          color: #f4f4f4; }
+          .card main footer article p:first-child {
+            margin: 0 0 15px 0;
+            font-size: 13px;
+            letter-spacing: 1px; }
+        .card main footer article .socials {
+          display: flex;
+          justify-content: flex-start;
+          align-items: flex-start; }
+          .card main footer article .socials .social {
+            display: block;
+            border: 2px solid #f4f4f4;
+            border-radius: 50px;
+            padding: 10px;
+            box-sizing: border-box;
+            margin: 0 10px 0 0; }
+        .card main footer article.mail a {
+          display: block;
+          color: #f4f4f4;
+          text-decoration: none;
+          margin: 0 0 5px 0; }
 
 /*# sourceMappingURL=style.css.map */
