--- a/sass/components/background.scss
+++ b/sass/components/background.scss
@@ -4,4 +4,28 @@
     background: $bgGradient;
     padding:30px 0 0 0;
     box-sizing: border-box;
+    position:relative;
+
+    &::before,
+    &::after{
+        position:absolute;
+        content:'';
+        width:350px;
+        height:350px;
+        border-radius:1000px;
+        filter:blur(5rem)
+    }
+
+    &::before{
+        top:50px;
+        left:100px;
+        background-color: $spotOrange;
+    }
+
+    &::after{
+        bottom:20px;
+        right:100px;
+        background-color: $spotBlue;
+        z-index:0;
+    }
 }
