--- a/sass/components/menu/menu.scss
+++ b/sass/components/menu/menu.scss
@@ -1,12 +1,14 @@
 header{
-    width:70%;
+    width:$maxWidth;
     height:auto;
-    margin:auto;
+    margin:0 auto 30px auto;
     background-image: linear-gradient(45deg, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0.05));
-    border:1px inset rgba(255,255,255,0.1);
-    border-radius: 25px;
+    border:$glassBorder;
+    border-radius: $mainRadius;
     padding:30px;
-    box-sizing: solid;
+    box-sizing: border-box;
+    backdrop-filter: blur( 10.5px );
+    -webkit-backdrop-filter: blur( 10.5px );
 
     .menu {
         width:100%;
