--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ header {
             display: block;
             border: 2px solid #f4f4f4;
             border-radius: 50px;
-            padding: 10px;
+            padding: 8px 10px;
             box-sizing: border-box;
             margin: 0 10px 0 0; }
         .card main footer article.mail a {
