--- a/sass/components/card/card.scss
+++ b/sass/components/card/card.scss
@@ -111,7 +111,7 @@
                         display:block;
                         border:2px solid $white;
                         border-radius:50px;
-                        padding:10px;
+                        padding:8px 10px;
                         box-sizing: border-box;
                         margin:0 10px 0 0;
                     }
