--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,9 @@
   background: linear-gradient(to bottom, #0e0e0e 0%, #262626 100%);
   padding: 30px 0 0 0;
   box-sizing: border-box;
-  position: relative; }
+  position: fixed;
+  left: 0;
+  top: 0; }
   .background::before, .background::after {
     position: absolute;
     content: '';
@@ -36,7 +38,7 @@
 header {
   width: 60%;
   height: auto;
-  margin: 0 auto 30px auto;
+  margin: 30px auto;
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0.05));
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 25px;
