--- a/sass/components/background.scss
+++ b/sass/components/background.scss
@@ -4,7 +4,9 @@
     background: $bgGradient;
     padding:30px 0 0 0;
     box-sizing: border-box;
-    position:relative;
+    position:fixed;
+    left:0;
+    top:0;
 
     &::before,
     &::after{
