--- a/sass/components/menu/menu.scss
+++ b/sass/components/menu/menu.scss
@@ -1,7 +1,7 @@
 header{
     width:$maxWidth;
     height:auto;
-    margin:0 auto 30px auto;
+    margin:30px auto;
     background-image: linear-gradient(45deg, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0.05));
     border:$glassBorder;
     border-radius: $mainRadius;
