--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@
   box-sizing: border-box;
   position: fixed;
   left: 0;
-  top: 0; }
+  top: 0;
+  z-index: -1; }
   .background::before, .background::after {
     position: absolute;
     content: '';
