--- a/sass/helpers/variables.scss
+++ b/sass/helpers/variables.scss
@@ -12,6 +12,8 @@ $cardButton: #854BE3;
 
 // FONTS
 $sansSerif: 'Montserrat', sans-serif;
+$serif : 'DM Serif Display', serif;
+$quote: 'Montagu Slab', serif;
 
 // SIZES
 $maxWidth: 60%;
