--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,3 +6,4 @@
 @import "components/background.scss";
 @import "components/menu/menu.scss";
 @import "components/card/card.scss";
+@import "components/infos/infos.scss";
