--- a/css/style.css
+++ b/css/style.css
@@ -157,4 +157,39 @@ header {
           text-decoration: none;
           margin: 0 0 5px 0; }
 
+main.infos {
+  width: 60%;
+  height: auto;
+  margin: auto; }
+  main.infos .quote {
+    margin: 0 0 30px 0;
+    padding: 5%;
+    box-sizing: border-box;
+    position: relative; }
+    main.infos .quote::before, main.infos .quote::after {
+      content: '"';
+      font-family: "Montagu Slab", serif;
+      position: absolute;
+      color: #f4f4f4;
+      font-size: 200px;
+      font-weight: bold;
+      opacity: 0.3;
+      z-index: 1; }
+    main.infos .quote::before {
+      top: 0;
+      left: 0; }
+    main.infos .quote::after {
+      right: 0;
+      bottom: -100px; }
+    main.infos .quote p {
+      color: #f4f4f4;
+      font-size: 52px;
+      font-family: "DM Serif Display", serif;
+      font-style: italic;
+      z-index: 10; }
+      main.infos .quote p strong {
+        font-family: "DM Serif Display", serif;
+        font-style: italic;
+        font-weight: 500; }
+
 /*# sourceMappingURL=style.css.map */
