--- a/css/style.css
+++ b/css/style.css
@@ -191,5 +191,37 @@ main.infos {
         font-family: "DM Serif Display", serif;
         font-style: italic;
         font-weight: 500; }
+  main.infos section.expertise {
+    width: 100%;
+    height: auto;
+    margin: 0 0 30px 0; }
+    main.infos section.expertise h1, main.infos section.expertise h2 {
+      color: #f4f4f4;
+      font-size: 30px;
+      position: relative;
+      margin: 0 0 30px 0; }
+      main.infos section.expertise h1::after, main.infos section.expertise h2::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: -10px;
+        height: 2px;
+        width: 100%;
+        background: #f4f4f4;
+        opacity: 0.75; }
+    main.infos section.expertise ul {
+      list-style: none; }
+      main.infos section.expertise ul li {
+        float: left;
+        width: auto;
+        padding: 15px 25px;
+        box-sizing: border-box;
+        background-image: linear-gradient(94deg, #62B8DF 0%, #5B44D8 50%, #C054F2 100%);
+        margin: 0 20px 20px 0;
+        transform: skewX(-15deg); }
+        main.infos section.expertise ul li p {
+          color: #f4f4f4;
+          font-weight: 600;
+          font-size: 20px; }
 
 /*# sourceMappingURL=style.css.map */
