--- a/sass/helpers/variables.scss
+++ b/sass/helpers/variables.scss
@@ -1,5 +1,6 @@
-// COLORS-14.09% 20.12%
+// COLORS
 $white: #f4f4f4;
+$black: #1b1b1b;
 $bgGradient: linear-gradient(to bottom, #0e0e0e 0%, #262626 100%);
 $cardGradient: radial-gradient(circle at -8% 10%, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.01) 100%);
 $cardFooterGradient: linear-gradient(94deg, #62B8DF 0%, #5B44D8 50%, #C054F2 100%);
