--- a/sass/components/infos/expertise.scss
+++ b/sass/components/infos/expertise.scss
@@ -1,7 +1,7 @@
 section.expertise{
     width:100%;
     height:auto;
-    margin:0 0 30px 0;
+    margin:60px 0;
 
     @import "infosTitles.scss";
 
