--- a/sass/components/infos/infos.scss
+++ b/sass/components/infos/infos.scss
@@ -6,4 +6,5 @@ main.infos {
     @import "quote.scss";
     @import "expertise.scss";
     @import "technologies.scss";
+    @import "formations.scss";
 }
