--- a/css/style.css
+++ b/css/style.css
@@ -257,5 +257,47 @@ main.infos {
           width: 30px;
           height: 30px;
           transform: rotate(-45deg); }
+  main.infos section.formations {
+    width: 100%;
+    height: auto;
+    margin: 60px 0; }
+    main.infos section.formations h1, main.infos section.formations h2 {
+      color: #f4f4f4;
+      font-size: 30px;
+      position: relative;
+      margin: 0 0 30px 0; }
+      main.infos section.formations h1::after, main.infos section.formations h2::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: -10px;
+        height: 2px;
+        width: 100%;
+        background: #f4f4f4;
+        opacity: 0.75; }
+    main.infos section.formations ul {
+      list-style: none;
+      padding: 20px 0 0 0;
+      box-sizing: border-box; }
+      main.infos section.formations ul li {
+        width: 100%;
+        border: 2px solid #D8A4F7;
+        padding: 15px;
+        box-sizing: border-box;
+        border-radius: 30px;
+        margin: 0 0 20px 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-between; }
+        main.infos section.formations ul li p {
+          color: #f4f4f4;
+          font-size: 16px; }
+          main.infos section.formations ul li p.formationName {
+            font-size: 20px;
+            font-family: "DM Serif Display", serif; }
+          main.infos section.formations ul li p.schoolName {
+            font-weight: 300; }
+          main.infos section.formations ul li p.year {
+            font-style: italic; }
 
 /*# sourceMappingURL=style.css.map */
