--- a/sass/components/infos/infos.scss
+++ b/sass/components/infos/infos.scss
@@ -7,4 +7,5 @@ main.infos {
     @import "expertise.scss";
     @import "technologies.scss";
     @import "formations.scss";
+    @import "experiences.scss";
 }
