--- a/sass/components/infos/experiences.scss
+++ b/sass/components/infos/experiences.scss
@@ -1,4 +1,4 @@
-section.formations{
+section.experiences{
     width:100%;
     height:auto;
     margin:60px 0;
@@ -12,7 +12,6 @@ section.formations{
 
         li{
             width:100%;
-            border:2px solid $cardShadow;
             padding:15px;
             box-sizing: border-box;
             border-radius: 30px;
@@ -20,22 +19,22 @@ section.formations{
             display:flex;
             align-items:center;
             justify-content: space-between;
-            background: rgba(10,10,10, 0.25);
+            background-image: $cardFooterGradient;
 
             p{
                 color:$white;
                 font-size:16px;
 
-                &.formationName{
+                &.jobName{
                     font-size:20px;
                     font-family:$serif;
                 }
 
-                &.schoolName{
+                &.jobLocation{
                     font-weight:300;
                 }
 
-                &.year{
+                &.date{
                     font-style:italic;
                 }
             }
