--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,3 +7,4 @@
 @import "components/menu/menu.scss";
 @import "components/card/card.scss";
 @import "components/infos/infos.scss";
+@import "components/works/works.scss";
