--- a/sass/components/works/works.scss
+++ b/sass/components/works/works.scss
@@ -3,4 +3,89 @@ main#workContainer {
     height:auto;
     margin:auto;
     z-index:10;
+
+    section{
+        width:100%;
+        display:flex;
+        align-items:flex-start;
+        justify-content:space-between;
+        border-radius:20px;
+        margin:0 0 30px 0;
+        border:1px solid rgba(255,255,255,0.25);
+        background:rgba(10,10,10,0.25);
+        backdrop-filter: blur(10.5px);
+        -webkit-backdrop-filter: blur(10.5px);
+        position:relative;
+
+        .workInfos{
+            width: 50%;
+
+            div.textualInfos{
+                padding:20px;
+                box-sizing: border-box;
+
+                h2{
+                    font-family: $serif;
+                    color:$white;
+                    font-weight:400;
+                    font-size:30px;
+                    position:relative;
+    
+                    &::after{
+                        content:'';
+                        position:absolute;
+                        bottom:-5px;
+                        left:0;
+                        width:100%;
+                        height:2px;
+                        background-image:$cardFooterGradient;
+                    }
+                }
+            }
+
+            p.workDescription{
+                font-weight:300;
+                color:$white;
+                font-style:italic;
+                font-size:17px;
+                margin:25px 0 40px 0;
+            }
+
+            .technologies{
+                width:calc(50% + 1px);
+                padding:15px;
+                box-sizing: border-box;
+                display:flex;
+                justify-content:flex-start;
+                align-items: flex-start;
+                flex-flow:row wrap;
+                background-image:$cardFooterGradient;
+                position:absolute;
+                bottom:0;
+                left:0;
+                border-bottom-left-radius: 20px;
+
+                .techno{
+                    width:auto;
+                    padding:3px 5px;
+                    box-sizing: border-box;
+                    border:2px solid $white;
+                    margin:0 10px 15px 10px;
+                    transform: rotate(45deg) translateY(10px);
+        
+                    img{
+                        width:15px;
+                        height:15px;
+                        transform:rotate(-45deg);
+                    }
+                }
+            }
+        }
+
+        &>img{
+            width:50%;
+            border-top-right-radius: 20px;
+            border-bottom-right-radius: 20px;
+        }
+    }
 }
