--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ header {
           box-sizing: border-box;
           text-decoration: none; }
       .card main section article.photo img {
+        width: 250px;
         border-radius: 1000px;
         border: 2px solid rgba(255, 255, 255, 0.25); }
     .card main footer {
@@ -151,6 +152,8 @@ header {
             padding: 8px 10px;
             box-sizing: border-box;
             margin: 0 10px 0 0; }
+            .card main footer article .socials .social img {
+              width: 30px; }
         .card main footer article.mail a {
           display: block;
           color: #f4f4f4;
@@ -350,6 +353,7 @@ main#workContainer {
   z-index: 10; }
   main#workContainer section {
     width: 100%;
+    height: 400px;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
@@ -386,7 +390,7 @@ main#workContainer {
         font-size: 17px;
         margin: 25px 0 40px 0; }
       main#workContainer section .workInfos .technologies {
-        width: calc(50% + 1px);
+        width: 50%;
         padding: 15px;
         box-sizing: border-box;
         display: flex;
@@ -400,7 +404,7 @@ main#workContainer {
         border-bottom-left-radius: 20px; }
         main#workContainer section .workInfos .technologies .techno {
           width: auto;
-          padding: 3px 5px;
+          padding: 5px 7px;
           box-sizing: border-box;
           border: 2px solid #f4f4f4;
           margin: 0 10px 15px 10px;
@@ -408,9 +412,13 @@ main#workContainer {
           main#workContainer section .workInfos .technologies .techno img {
             width: 15px;
             height: 15px;
-            transform: rotate(-45deg); }
-    main#workContainer section > img {
+            transform: rotate(-45deg) translateX(-1px); }
+    main#workContainer section .workImage {
       width: 50%;
+      height: 400px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
       border-top-right-radius: 20px;
       border-bottom-right-radius: 20px; }
 
